k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: zaif-namespace
spec:
  type: NodePort
  selector:
    app: todo
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30036
